     work well with MP campaigns.
   * MP "Configure" and "Connect" screens have been adjusted to allow to see
     all scenarios and sides in the debug mode.
   * MP "Lobby" game item has been updated to display information about
     campaigns correctly.
   * Possible fix for clipboard integration issues with GUI2 widgets on X11.
 * Miscellaneous and bug fixes:
   * Added -256 and -512 color shifts to FADE_TO_BLACK and FADE_TO_BLACK_HOLD
     macros to account for ToD color shifts greater than -31, guaranteeing
     complete darkness.
   * Unit WML frames with image modifications are now shown correctly for
     hits/death.
   * Fixed compare_images.py (called by wesnoth-optipng) and pofix.py to
     function with python-3.2.
   * Refactored and split the MP "Create" and "Connect" screens' code into
     gui and engine parts.
   * Lock faction, leader, and gender selections in MP "Connect" if "Use map
     settings" is on and default values were provided.

Version 1.11.6:
 * Add-ons client:
   * The Description popup displays the selected add-on's dependencies now,
     using color-keyed statuses.
   * Circular dependencies are no longer treated as erroneous in terminal
     output.
 * AI:
   * Micro AIs:
     * New Hang Out Micro AI
     * Any number of Micro AIs can now be combined on the same side
     * Goto MAI: new parameters avoid_enemies=, ignore_units= and ignore_enemy_at_goal=
     * Goto MAI: [filter] is now an optional parameter
     * ca_id is now an optional parameter for all MAIs
     * ca_score is now an optional parameter for almost all MAIs
     * Bug fixes for Patrol, Messenger, Multipack Wolves and all Guardian MAIs
     * [goal] tags in [ai] blocks with turns= or time_of_day= will now work.
 * Campaigns:
   * An Orcish Incursion:
     * New world map.
   * Descent Into Darkness:
     * New world map.
   * Legend of Wesmere:
     * convert to "wmllint: who" magic comments
   * The South Guard: