@@ -39,6 +39,8 @@ Version 1.11.6+dev:
      "Configure" screen.
    * MP lobby shows the campaign's name along the scenario's name
      (CampaignWML only).
+   * Fixed potential misbehavior (including invalid memory access) from the
+     tray notifications code on Windows.
 
 
 Version 1.11.6:
